Uniform deletion genetic operator.